# project-sanjaya

./: .env.example  .gitignore  README.md  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: AddBlockModal.tsx  ChartCard.tsx  FocusDial.tsx  Heatmap.tsx  Markdown.tsx  MixBars.tsx  SpanEditor.tsx  TimelineStrip.tsx  charts.tsx  pickers.tsx  ui.tsx
dashboard/src/lib/: api.ts  format.ts  palette.ts  theme.ts
dashboard/src/pages/: Goals.tsx  History.tsx  Insights.tsx  Onboarding.tsx  Placeholder.tsx  Review.tsx  Settings.tsx  Today.tsx
docs/: INSTALL.md  qa-checklist.md
extension/: README.md  background.js  manifest.json
extension/content/: youtube.js
sanjaya/: __init__.py  __main__.py  app.py  autostart.py  config.py  db.py  desktop.py  env.py  export.py  focus.py  goals.py  log.py  metrics.py  paths.py  privacy.py  reporting.py  runtime.py  singleton.py  timeutil.py  tray.py
sanjaya/ai/: __init__.py  budget.py  groq_client.py  jobs.py  prompts.py  redact.py
sanjaya/collector/: __init__.py  idle.py  media.py  parsers.py  sampler.py  spans.py  stopwatch.py
sanjaya/rules/: __init__.py  engine.py
sanjaya/server/: __init__.py  api.py  app.py  ingest.py  scheduler.py
sanjaya/server/static/: index.html  manifest.webmanifest
sanjaya/server/static/assets/: index-BljExvRY.js  index-BtEamCZB.css  index-C0xOIkha.js  index-TLiG1Ib-.css
scripts/: dev.ps1  install_shortcut.ps1  preview_server.py
tests/: conftest.py  test_ai.py  test_api_edits.py  test_api_goals.py  test_api_range.py  test_api_summary.py  test_focus.py  test_goals.py  test_parsers.py  test_phase10.py  test_phase9.py  test_reporting_summary.py  test_rules.py  test_schema.py  test_server_ingest.py  test_spanbuilder.py
